src/content/docs/versions/http-api/0.4.x/inputs/decklink.mdx
---
title: DeckLink
slug: http-api/0.4.x/http-api/inputs/decklink
---

import { Aside, Code, Badge } from "@astrojs/starlight/components";
import CollapsibleDetails from "@components/CollapsibleDetails.astro";

<Badge text="Required feature: decklink" variant="note" size="large" />

<br />

<br />

An input type that allows consuming streams from Blackmagic DeckLink cards.

## Usage

To use DeckLink input you must register it first. You can do it by sending a request like this:

<CollapsibleDetails summaryTitle="Example request" open>
  ```http
  POST: /api/input/:input_id/register
  Content-Type: application/json

  {
    "type": "decklink",
    "display_name": "DeckLink Quad HDMI Recorder (3)"
  }
  ```
</CollapsibleDetails>

See [HTTP Routes](/http-api/0.4.x/routes#inputs-configuration) documentation to learn more about managing inputs.

## Reference

<CollapsibleDetails summaryTitle="Type definition" open>
  ```tsx
  type DeckLinkInput = {
    type: "decklink";
    subdevice_index?: u32;
    display_name?: string;
    persistent_id?: string;
    enable_audio?: bool;
    required?: bool;
  };
  ```
</CollapsibleDetails>

Capture streams from devices connected to Blackmagic DeckLink card.

## Properties

### id

ID of a component.

* **Type**: `string`

***

### subdevice\_index

Single DeckLink device can consist of multiple sub-devices. This field defines index of sub-device that should be used.

The input device is selected based on fields `subdevice_index`, `persistent_id` **AND** `display_name`.
All of them need to match the device if they are specified. If nothing is matched, the error response
will list available devices.

* **Type**: u32

***

### display\_name

Select sub-device to use based on the display name. This is the value you see in e.g. Blackmagic Media Express app. like "DeckLink Quad HDMI Recorder (3)"

The input device is selected based on fields `subdevice_index`, `persistent_id` **AND** `display_name`.
All of them need to match the device if they are specified. If nothing is matched, the error response
will list available devices.

* **Type**: string

***

### persistent\_id

Persistent ID of a device represented by 32-bit hex number. Each DeckLink sub-device has a separate id.

The input device is selected based on fields `subdevice_index`, `persistent_id` **AND** `display_name`.
All of them need to match the device if they are specified. If nothing is matched, the error response
will list available devices.

* **Type**: string

***

### enable\_audio

Enable audio support.

* **Type**: `bool`
* **Default value**: `true`

***

### required

If input is required and frames are not processed on time, then Smelter will delay producing output frames.

* **Type**: `bool`
* **Default value**: `false`
